初步完成mvc todo：再次重构

--- a/vue-mvc/index.html
+++ b/vue-mvc/index.html
@@ -10,65 +10,106 @@
 
 <body>
     <div id="app">
-        <div>
-            书名：__name__ 数量：
-            <span id="number">__number__</span>
-        </div>
-        <div>
-            <button id="addOne">加1</button>
-            <button id="minusOne">减一</button>
-            <button id="reset">归零</button>
-        </div>
+
     </div>
     <script src="https://cdn.bootcss.com/axios/0.18.0/axios.js"></script>
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
     <script>   
 
-
-
-        axios.get('/books/1').then(
-            ({ data }) => {
-                console.log(data);
-                let originHtml = $('#app').html();
-                let newHtml = originHtml.replace('__name__', data.name).replace('__number__', data.number);
-                $('#app').html(newHtml);
-
+        let model = {
+            data: {
+                name: '',
+                number: 0,
+                id: ''
             },
-            (err) => { console.log(err) },
+            fetch(id) {
+                return axios.get(`/books/${id}`)
+                    .then(
+                        (response) => {
+                            this.data = response.data;
+                            return response;
+                        }
+                    )
+            },
+            update(id, newData) {
+                return axios.put(`/books/${id}`, newData)
+                    .then(
+                        (response) => {
+                            this.data = response.data;
+                            return response;
+                        }
+                    )
+            }
+        }
+        let view = {
+            el: '#app',
+            template: `  
+            <div>
+                书名：__name__ 数量：
+                <span id="number">__number__</span>
+            </div>
+            <div>
+                <button id="addOne">加1</button>
+                <button id="minusOne">减一</button>
+                <button id="reset">归零</button>
+            </div>`,
+            render(data) {
+                let renderedHtml = this.template.replace('__name__', data.name).replace('__number__', data.number);
+                $(this.el).html(renderedHtml)
+            }
+        }
+
+        let controller = {
+            init({ view, model }) {
+                this.view = view;
+                this.model = model;
+                this.view.render(this.model.data);
+                this.bindEvents()
+                this.model.fetch(1).then(
+                    () => {
+                        console.log(this.model.data);
+                        this.view.render(this.model.data)
+                    },
+                    (err) => { console.log(err) },
 
 
-        )
-        $('#app').on('click', '#addOne', () => {
-            var oldNum = $('#number').text();
-            var newNum = oldNum - 0 + 1;
-            axios.put('/books/1', { number: newNum }).then(
-                ({ data }) => {
-                    $('#number').text(data.number)
-                }
-            )
-        })
+                )
+            },
+            addOne() {
+                var oldNum = $('#number').text();
+                var newNum = oldNum - 0 + 1;
+                this.model.update(1, { number: newNum }).then(
+                    () => {
+                        this.view.render(this.model.data)
+                    }
+                )
+            },
+            minusOne() {
+                var oldNum = $('#number').text();
+                var newNum = oldNum - 0 - 1;
+                this.model.update(1, { number: newNum }).then(
+                    ({ data }) => {
+                        this.view.render(this.model.data)
+                    }
+                )
+            },
+            reset() {
+                this.model.update(1, { number: 0 }).then(
+                    ({ data }) => {
+                        this.view.render(this.model.data)
+                    }
+                )
+            },
+            bindEvents() {
+                $(this.view.el).on('click', '#addOne', this.addOne.bind(this))
 
-        $('#app').on('click', '#minusOne', () => {
-            var oldNum = $('#number').text();
-            var newNum = oldNum - 0 - 1;
-            axios.put('/books/1', { number: newNum }).then(
-                ({ data }) => {
-                    $('#number').text(data.number)
-                }
-            )
-        })
+                $(this.view.el).on('click', '#minusOne', this.minusOne.bind(this))
 
-        $('#app').on('click', '#reset', () => {
-            axios.put('/books/1', { number: 0 }).then(
-                ({ data }) => {
-                    $('#number').text(data.number)
-                }
-            )
-        })
+                $(this.view.el).on('click', '#reset', this.reset.bind(this))
+            }
+        }
 
-
-
-
+        controller.init({ view, model })
         mockRequest();
         function mockRequest() {
             //添加响应拦截器
