update resume todo

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <div id="topNavBar" class="topNavBar">
     <div class="topNavBar-inner clearfix">
       <a class="logo" href="#" alt="logo" style="float: left;">
-        <span class="rs">RS</span>
-        <span class="card">card</span>
+        <span class="rs">CHAOS</span>
+        <span class="card">JS</span>
       </a>
       <nav class="menu" style="float: right;">
         <ul class="clearfix">
@@ -65,11 +65,12 @@
           <img src="./img/avatar.jpg" width="299" height="347" alt="头像">
         </div>
         <div class="text">
-          <span class="welcome">Hello
+          <span class="welcome">你好，我是一名前端工程师
             <span class="triangle"></span>
           </span>
           <h1>chaos_js</h1>
-          <p>前端开发工程师</p>
+          <p> 前端工程师。
+            <br> 技能：前端开发，Rails 开发，Node.js 开发</p>
           <hr>
           <dl>
             <dt>年龄</dt>
@@ -81,7 +82,11 @@
             <dt>手机</dt>
             <dd>13812345678</dd>
           </dl>
+          <div class="downloadResume-wrapper">
+            <a class="downloadResume" href="./test.pdf" target="_blank" download>下载 PDF 简历</a>
+          </div>
         </div>
+
       </div>
       <footer class="media">
         <a href="#">
@@ -106,13 +111,11 @@
         </a>
       </footer>
     </div>
-    <p class="downloadResume-wrapper">
-      <a class="downloadResume" href="./test.pdf" target="_blank" download>下载 PDF 简历</a>
-    </p>
+
 
     <p class="selfIntroduction">
-      chaos_js 前端工程师。
-      <br> 技能：前端开发，Rails 开发，Node.js 开发
+      <!-- chaos_js 前端工程师。
+      <br> 技能：前端开发，Rails 开发，Node.js 开发 -->
     </p>
 
   </main>
@@ -171,18 +174,28 @@
   </section>
   <section class="portfolio" id="siteWorks" data-x>
     <h2>作品集</h2>
-    <nav>
-      <!-- <ol class="clearfix">
-        <li id="portfolio1">所有</li>
-        <li id="portfolio2">框架</li>
-        <li id="portfolio3">原生JS&amp;CSS</li>
-      </ol> -->
-      <div id="portfolioBar" class="bar state-1">
-        <div class="bar-inner"></div>
-      </div>
-    </nav>
     <div id="mySlides">
-      <div class="swiper-container">
+      <ul>
+        <li>
+          <img src="./img/works/nav-site.jpg" alt="">
+        </li>
+        <li>
+          <img src="./img/works/canvas.jpg" alt="">
+        </li>
+        <li>
+          <img src="./img/works/apple-style.jpg" alt="">
+        </li>
+        <li>
+          <img src="./img/works/nav-site.jpg" alt="">
+        </li>
+        <li>
+          <img src="./img/works/canvas.jpg" alt="">
+        </li>
+        <li>
+          <img src="./img/works/apple-style.jpg" alt="">
+        </li>
+      </ul>
+      <!-- <div class="swiper-container">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <img src="./img/works/nav-site.jpg" alt="">
@@ -195,15 +208,15 @@
             <img src="./img/works/apple-style.jpg" alt="">
           </div>
         </div>
-        <!-- 如果需要分页器 -->
         <div class="swiper-pagination"></div>
 
-        <!-- 如果需要导航按钮 -->
         <div class="swiper-button-prev"></div>
-        <div class="swiper-button-next"></div>
+        <div class="swiper-button-next"></div> -->
 
-      </div>
     </div>
+    </div>
+
+
     <div id="msg-container">
       <ol id="msgList">
 
