fix bug && resume

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>我的个人简历</title>
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.1.0/css/swiper.min.css">
-  <script src="https://at.alicdn.com/t/font_515481_smn188ipmq9kvs4i.js"></script>
+  <script src="https://at.alicdn.com/t/font_515481_6jkfgljcap2.js"></script>
 </head>
 
 <body>
@@ -28,29 +28,10 @@
           </li>
           <li>
             <a href="#siteWorks">作品</a>
-            <!-- <ul class="subMenu">
-              <li>作品 1</li>
-              <li>作品 2</li>
-              <li>作品 3</li>
-            </ul> -->
           </li>
           <li>
-            <a href="">博客</a>
-            <!-- <ul class="subMenu">
-              <li>作品 1</li>
-              <li>作品 2</li>
-              <li>作品 3</li>
-            </ul> -->
+            <a href="">留言板</a>
           </li>
-          <!-- <li>
-            <a href="">日历</a>
-          </li> -->
-          <li>
-            <a href="#">联系方式</a>
-          </li>
-          <!-- <li>
-            <a href="#">其他</a>
-          </li> -->
         </ul>
       </nav>
     </div>
@@ -70,45 +51,46 @@
           </span>
           <h1>chaos_js</h1>
           <p> 前端工程师。
-            <br> 技能：前端开发，Rails 开发，Node.js 开发</p>
+            <br> 技能：前端开发，javascript，React,Vue</p>
           <hr>
           <dl>
             <dt>年龄</dt>
-            <dd>18</dd>
+            <dd>28</dd>
             <dt>所在城市</dt>
             <dd>杭州</dd>
             <dt>邮箱</dt>
             <dd>lichao779@sina.com</dd>
             <dt>手机</dt>
-            <dd>13812345678</dd>
+            <dd>13208003623</dd>
           </dl>
           <div class="downloadResume-wrapper">
-            <a class="downloadResume" href="./test.pdf" target="_blank" download>下载 PDF 简历</a>
+            <a class="downloadResume" href="./李超-前端开发.doc" target="_blank" download>下载 WORD 简历</a>
           </div>
         </div>
 
       </div>
       <footer class="media">
-        <a href="#">
+        <a href="https://github.com/chaosJS">
           <svg class="icon" aria-hidden="true">
             <use xlink:href="#icon-github"></use>
           </svg>
         </a>
-        <a href="#">
+        <a href="https://www.cnblogs.com/chaosJS/">
+          <svg class="icon" aria-hidden="true">
+            <use xlink:href="#icon-blog"></use>
+          </svg>
+        </a>
+        <a href="https://weibo.com/u/1670453141">
           <svg class="icon" aria-hidden="true">
             <use xlink:href="#icon-weibo"></use>
           </svg>
         </a>
-        <a href="#">
+        <a href="https://www.facebook.com/charlie.li.5836">
           <svg class="icon" aria-hidden="true">
             <use xlink:href="#icon-facebook"></use>
           </svg>
         </a>
-        <a href="#">
-          <svg class="icon" aria-hidden="true">
-            <use xlink:href="#icon-youtube"></use>
-          </svg>
-        </a>
+
       </footer>
     </div>
 
@@ -127,7 +109,7 @@
           HTML 5 &amp; CSS 3
         </h3>
         <div class="progressBar">
-          <div class="progress" style="width: 10%;"></div>
+          <div class="progress" style="width: 80%;"></div>
         </div>
       </li>
       <li>
@@ -135,7 +117,7 @@
           JavaScript
         </h3>
         <div class="progressBar">
-          <div class="progress" style="width: 20%"></div>
+          <div class="progress" style="width: 70%"></div>
         </div>
       </li>
       <li>
@@ -143,7 +125,7 @@
           jQuery
         </h3>
         <div class="progressBar">
-          <div class="progress" style="width: 30%"></div>
+          <div class="progress" style="width: 50%"></div>
         </div>
       </li>
       <li>
@@ -159,7 +141,7 @@
           React.js
         </h3>
         <div class="progressBar">
-          <div class="progress" style="width: 50%"></div>
+          <div class="progress" style="width: 70%"></div>
         </div>
       </li>
       <li>
@@ -167,7 +149,7 @@
           Node.js
         </h3>
         <div class="progressBar">
-          <div class="progress" style="width: 60%"></div>
+          <div class="progress" style="width: 30%"></div>
         </div>
       </li>
     </ol>
@@ -177,7 +159,9 @@
     <div id="mySlides">
       <ul>
         <li>
-          <img src="./img/works/nav-site.jpg" alt="">
+          <a href="#">
+            <img src="./img/works/nav-site.jpg" alt="">
+          </a>
         </li>
         <li>
           <img src="./img/works/canvas.jpg" alt="">
