--- a/index.html
+++ b/index.html
@@ -159,15 +159,19 @@
     <div id="mySlides">
       <ul>
         <li>
-          <a href="#">
+          <a href="https://chaosjs.github.io/j-project/site-nav/">
             <img src="./img/works/nav-site.jpg" alt="">
           </a>
         </li>
         <li>
-          <img src="./img/works/canvas.jpg" alt="">
+          <a href="https://chaosjs.github.io/j-project/canvas-demo/index.html">
+            <img src="./img/works/canvas.jpg" alt="">
+          </a>
         </li>
         <li>
-          <img src="./img/works/apple-style.jpg" alt="">
+          <a href="https://chaosjs.github.io/j-project/carousel-slide/apple-like-slide/index.html">
+            <img src="./img/works/apple-style.jpg" alt="">
+          </a>
         </li>
         <li>
           <img src="./img/works/nav-site.jpg" alt="">
