replace word to pdf

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <dd>13208003623</dd>
           </dl>
           <div class="downloadResume-wrapper">
-            <a class="downloadResume" href="./李超-前端开发.doc" target="_blank" download>下载 WORD 简历</a>
+            <a class="downloadResume" href="./李超-前端开发.pdf" target="_blank" download>下载 PDF 简历</a>
           </div>
         </div>
 
